###############################################################################
# CMakeLists.txt
#
# Defines build structure for applications from excercise 2
#
# Author: akowalew (ram.techen@gmail.com)
# Date: 5.11.2019 20:37 CEST
###############################################################################

add_subdirectory(audiofir)
add_subdirectory(matmultran)
